fix(products): fix button text alignment on new product form

--- a/app/assets/stylesheets/stores/_store_new_product.scss
+++ b/app/assets/stylesheets/stores/_store_new_product.scss
@@ -128,8 +128,8 @@ $title-font: #353434;
   }
 
   &__link {
-    width: 129px;
-    height: 30px;
+    width: 136px;
+    height: 40px;
     padding: 5px;
     background-color: $primary_color;
     color: $white;
